--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -31,7 +31,8 @@
 
 .logo-text1 {
   font-family: 'Baloo Tammudu 2', Nunito, Quicksand, Arial, sans-serif;
-  font-weight: ExtraBold;
+  font-weight: Bold;
+  text-decoration: none;
   margin-left: 0.4em;
   margin-bottom: -3em;
   position: relative;
@@ -59,6 +60,8 @@
   font-family: 'Baloo Tammudu 2', Nunito, Quicksand, Arial, sans-serif;
   margin-bottom: -3em;
   position: relative;
+  font-weight: Bold;
+  text-decoration: none;
   line-height: 0em;
   top:0.48em;
   left: 3em;
