--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -156,7 +156,7 @@ body {
   line-height: 1em;
   position: relative;
   top: -2.75em;
-  left: 15em;
+  left: 14.75em;
   border-radius: 2em;
 }
 .home-explore-btn3 button {
@@ -176,15 +176,15 @@ body {
 
 .home-bg {
   background-image: url('../../images/GumBoxes2.png');
-  width:614px;
-  height:512px;
+  width:502px;
+  height:419px;
   position:relative;
-  top:19.5em;
-  left: 6em;
-  background-size: 95%;
+  top:14.5em;
+  left: 5em;
+  background-size: 100%;
   background-repeat: no-repeat;
-  height: 65vh;
-  // outline: 1px solid red;
+  // height: 65vh;
+  outline: 1px solid red;
   z-index: -1;
 }
 
@@ -193,21 +193,21 @@ body {
 .gum-images-row2 {
   display: flex;
   position: relative;
-  top: -13.75em;
+  top: -3.75em;
   // max-width: 90%;
-  left:47.5em;
+  left:38.1em;
   // right:-20em;
 
   // outline: 1px solid red;
 }
 .cherry-lemon-img {
   filter: drop-shadow(0.5em 0.5em 0.5em rgba(0,0,0,0.5));
-  margin-right: 4em;
+  margin-right: 3em;
   // outline: 1px solid red;
 }
 .banana-peppermint-img {
   filter: drop-shadow(0.5em 0.5em 0.5em rgba(0,0,0,0.5));
-  margin-right: 4em;
+  margin-right: 3em;
   // outline: 1px solid red;
 }
 .peppermint-cherry-img {
@@ -218,12 +218,12 @@ body {
 .names-of-gum-row2 {
   display: flex;
   position: relative;
-  top: -40em;
-  left: 0.25em;
+  top: -26em;
+  left: -3.25em;
 }
 .cherry-lemon-label {
   font-family: 'Baloo Tammudu 2', Nunito, Quicksand, Arial, sans-serif;
-  font-size: 1.75em;
+  font-size: 1.5em;
   font-weight: bold;
   color:#420B3B;
   position:relative;
@@ -233,21 +233,21 @@ body {
 }
 .banana-peppermint-label {
   font-family: 'Baloo Tammudu 2', Nunito, Quicksand, Arial, sans-serif;
-  font-size: 1.75em;
+  font-size: 1.5em;
   font-weight: bold;
   color:#420B3B;
   position:relative;
-  left: 35.5em; //this is causing page overflow
+  left: 34.25em; //this is causing page overflow
   top: 14.5em;
   // outline: 1px solid red;
 }
 .peppermint-cherry-label {
   font-family: 'Baloo Tammudu 2', Nunito, Quicksand, Arial, sans-serif;
-  font-size: 1.75em;
+  font-size: 1.5em;
   font-weight: bold;
   color:#420B3B;
   position:relative;
-  left: 39.9em; //this is causing page overflow
+  left: 37.75em; //this is causing page overflow
   top: 14.5em;
   // outline: 1px solid red;
 }
@@ -264,43 +264,43 @@ body {
 .home-explore-btn4 button {
   border: none;
   font-family: 'Baloo Tammudu 2', Nunito, Quicksand, Arial, sans-serif;
-  font-size: 1.6875em;
+  font-size: 1.5em;
   font-weight: bold;
   color:#FF8B2C;
   background-color: #420B3B;
   padding: 0.75em 1em 0.25em 1em;
   line-height: 1em;
   position: relative;
-  top: -9em;
-  left: 31.5em;
+  top: -3.5em;
+  left: 28.5em;
   border-radius: 2em;
 }
 .home-explore-btn5 button {
   border: none;
   font-family: 'Baloo Tammudu 2', Nunito, Quicksand, Arial, sans-serif;
-  font-size: 1.6875em;
+  font-size: 1.5em;
   font-weight: bold;
   color:#FF8B2C;
   background-color: #420B3B;
   padding: 0.75em 1em 0.25em 1em;
   line-height: 1em;
   position: relative;
-  top: -11em;
-  left: 46.75em;
+  top: -5.5em;
+  left: 42em;
   border-radius: 2em;
 }
 .home-explore-btn6 button {
   border: none;
   font-family: 'Baloo Tammudu 2', Nunito, Quicksand, Arial, sans-serif;
-  font-size: 1.6875em;
+  font-size: 1.5em;
   font-weight: bold;
   color:#FF8B2C;
   background-color: #420B3B;
   padding: 0.75em 1em 0.25em 1em;
   line-height: 1em;
   position: relative;
-  top: -13em;
-  left: 61.5em;
+  top: -7.5em;
+  left: 55.25em;
   border-radius: 2em;
 }
 .home-explore-btn1 button:hover {
